* Added overflow-y hidden to fix horizontal overflow issue that apeared

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html {
 body{
     background-color: var(--light);
     margin: 0;
+    overflow-x: hidden;
 }
 
 .section-centered{
